# Weather-Predict-Model

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: contracts.md  testing.md  uv-guide.md
reports/: .gitkeep
schemas/: clean.yaml  evaluate.yaml  failure.yaml  features.yaml  ingest.yaml  survival.yaml  train.yaml
src/clean/: __init__.py  cleaner.py  main.py
src/evaluate/: __init__.py  evaluator.py  main.py
src/failure/: __init__.py  analyzer.py  main.py
src/features/: __init__.py  feature_engineering.py  main.py  validator.py
src/ingest/: __init__.py  logger.py  main.py  validator.py
src/survival/: __init__.py  analyzer.py  main.py
src/train/: __init__.py  main.py  trainer.py
tests/: conftest.py
tests/test_clean/: __init__.py
tests/test_evaluate/: __init__.py
tests/test_failure/: __init__.py
tests/test_ingest/: __init__.py
tests/test_survival/: __init__.py
tests/test_train/: __init__.py
